test/vm/errors/compiler/invalid_assignment_target.ach
// Compiler error: invalid assignment target (not an lvalue)
// Expected: error about invalid assignment target

(1 + 2) = 5
